kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: myapp
  sessionAffinity: None
  type: ClusterIP
